argoproj/sensorstriggers/webhook-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argoworkflows-webhook
  namespace: argo
spec:
  ingressClassName: nginx
  rules:
  - host: webhook.gals.local
    http:
      paths:
      - backend:
          service:
            name: webhook-eventsource-svc
            port:
              number: 12000
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - webhook.gals.local
    secretName: gals-local-tls
